# cortex

./: CORTEX_ARCHITECTURE.md  CORTEX_PROJECT_PLAN.md  Cargo.toml  SCAFFOLD_PLAN.md  batch_01.sh  batch_02.sh  batch_03.sh  batch_04a.sh  batch_04b.sh  batch_05a.sh  batch_05b.sh  batch_06a.sh  batch_06b.sh  batch_06c.sh  batch_07a.sh  batch_07b.sh  batch_07c.sh  batch_08a.sh  batch_08b.sh  batch_08c.sh  batch_08d.sh  batch_09.sh  batch_10a.sh  batch_10b.sh  batch_10c.sh  batch_11.sh  batch_12a.sh  batch_12b.sh  batch_13a.sh  batch_13b.sh  batch_14.sh  batch_15.sh  batch_16.sh  batch_17.sh  batch_18.sh  batch_19.sh  batch_20.sh  cortex.toml  phase_0.sh  phase_01.sh
crates/cortex-aat/: Cargo.toml
crates/cortex-aat/src/: aat_formatter.rs  jurisdiction_mapper.rs  lib.rs  scitt_anchoring.rs  signed_receipt.rs
crates/cortex-absorb/: Cargo.toml
crates/cortex-absorb/src/: branch_router.rs  ephemeral_pool.rs  just_in_time_absorption.rs  lib.rs  write_approval_gate.rs
crates/cortex-bench/: Cargo.toml
crates/cortex-bench/src/: autoresearch_adapter.rs  backup_validation_adapter.rs  bench_trait.rs  cdc_load_adapter.rs  lib.rs  mcp_bom_adapter.rs  scarfbench_adapter.rs
crates/cortex-cli/: Cargo.toml
crates/cortex-cli/src/: audit.rs  configure.rs  connect.rs  deploy.rs  lib.rs  main.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: config.rs  feature_gate.rs  lib.rs  runtime.rs
crates/cortex-council/: Cargo.toml
crates/cortex-council/src/: handoff.rs  lib.rs  orchestrator.rs  state_manager.rs  talent.rs  talent_market.rs
crates/cortex-deep-research/: Cargo.toml
crates/cortex-deep-research/src/: cycle_consistent_reward.rs  knowledge_graph_expander.rs  lib.rs  low_step_filter.rs  openseeker_trainer.rs  tool_set_expander.rs
crates/cortex-document-intelligence/: Cargo.toml
crates/cortex-document-intelligence/src/: benchmark_cross_reference.rs  compliance_screener.rs  doc_ingestor.rs  document_lineage.rs  feedback_generator.rs  lib.rs  scan_to_dashboard.rs
crates/cortex-dream/: Cargo.toml
crates/cortex-dream/src/: compressor.rs  consolidator.rs  contradiction.rs  journal.rs  lib.rs  pruner.rs  scheduler.rs
crates/cortex-due-diligence/: Cargo.toml
crates/cortex-due-diligence/src/: dd_report_generator.rs  lib.rs
crates/cortex-gateway/: Cargo.toml
crates/cortex-gateway/src/: a2a_bridge.rs  code_mode_cache.rs  connector_auto_discovery.rs  cross_system_bar.rs  embedding_router.rs  execution_planner.rs  intent_parser.rs  lib.rs  mcp_client.rs  mcp_server.rs  semantic_gateway.rs  sessions.rs  tool_registry.rs  tool_versioning.rs  transport.rs
crates/cortex-genesis/: Cargo.toml
crates/cortex-genesis/src/: field_to_component_mapper.rs  intent_driven_composer.rs  lib.rs  schema_version_gate.rs  screen_reconstructor.rs  ux_middleware.rs  workflow_to_ui_converter.rs
crates/cortex-guard/: Cargo.toml
crates/cortex-guard/src/: behavioral_baseline.rs  forensic_mode.rs  heartbeat_monitor.rs  kill_switch.rs  lib.rs  recovery_workflow.rs
crates/cortex-integration/: Cargo.toml
crates/cortex-integration/src/: connector_registry.rs  legacy_adapter.rs  lib.rs  openapi_generator.rs  schema_reverse_engineer.rs
crates/cortex-interface/: Cargo.toml
crates/cortex-interface/src/: a2ui_adapter.rs  absorption_engine.rs  accessibility_tokens.rs  accessibility_tokens_v2.rs  activity_camouflage.rs  adaptive_ui_renderer.rs  adoption_bridge.rs  adoption_journey.rs  agent_topology_view.rs  agui_adapter.rs  command_center.rs  component_catalog.rs  component_catalog_v2.rs  component_spec_validator.rs  cross_device_sync.rs  cross_system_bar.rs  dashboard_composer_v2.rs  design_tokens.rs  dual_write_propagator.rs  facade.rs  fidelity_scorer.rs  lib.rs  morning_brief.rs  native_ui_accessibility.rs  native_ui_ocr.rs  native_ui_terminal.rs  notification_manager.rs  observational_capture.rs  persona_customizer.rs  personalized_dashboard.rs  progressive_disclosure.rs  role_dashboard.rs  speakable_brief.rs  theme_manager.rs  tool_call_visualizer.rs  unified_workspace.rs  voice_command_handler.rs  wcag_auditor.rs  weaning_engine.rs  widget_generator.rs  (+1 more)
crates/cortex-iter-research/: Cargo.toml
crates/cortex-iter-research/src/: context_budget.rs  lib.rs  markovian_workspace.rs  tool_call_scaler.rs
crates/cortex-knowledge-snap/: Cargo.toml
crates/cortex-knowledge-snap/src/: baseline_generator.rs  benchmark_data.rs  company_tailoring_wizard.rs  compliance_benchmark_loader.rs  industry_templates.rs  lib.rs  org_structure_ingestor.rs  regulatory_calendar.rs
crates/cortex-memory/: Cargo.toml
crates/cortex-memory/src/: coherency.rs  decay.rs  episodic.rs  federated.rs  governance.rs  layer.rs  lib.rs  merkle.rs  procedural.rs  provenance_index.rs  semantic.rs  ux_preference_store.rs
crates/cortex-observability/: Cargo.toml
crates/cortex-observability/src/: anomaly.rs  lib.rs  metrics.rs  outcome_metrics.rs  spans.rs
crates/cortex-onboarding/: Cargo.toml
crates/cortex-onboarding/src/: adaptive_checklist.rs  first_day_brief.rs  industry_router.rs  lib.rs  role_path_builder.rs
crates/cortex-provenance/: Cargo.toml
crates/cortex-provenance/src/: aat_formatter.rs  audit_log.rs  continuous_evidence_chain.rs  field_level_audit.rs  lib.rs  merkle_chain.rs  scitt_builder.rs  signing.rs  tracecaps.rs  vap_compliance.rs
crates/cortex-publish/: Cargo.toml
crates/cortex-publish/src/: dell_submission_package.rs  figure_generator.rs  latex_assembler.rs  lib.rs  table_generator.rs
crates/cortex-pulse/: Cargo.toml
crates/cortex-pulse/src/: anomaly_detector.rs  baseline_engine.rs  bayesian_fusion_model.rs  eye_integrator.rs  lib.rs  voice_biomarker_extractor.rs
crates/cortex-replace/: Cargo.toml
crates/cortex-replace/src/: absorption_score_dashboard.rs  hybrid_rollback_handler.rs  lib.rs  license_savings_calculator.rs
crates/cortex-retire/: Cargo.toml
crates/cortex-retire/src/: equivalence_replay_engine.rs  lib.rs  (+2 more)
crates/cortex-security/: Cargo.toml
crates/cortex-self-validate/: Cargo.toml
crates/cortex-validate/: Cargo.toml
demo/: .env  (+4 more)
lfab-sleep/: Cargo.toml
(+261 files in other folders)
