[package]
name = "lfab-sleep"
version.workspace = true
edition.workspace = true

[dependencies]
lfab-core = { path = "../lfab-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
