[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
axum = { workspace = true }
cortex-core = { path = "../cortex-core" }
cortex-gateway = { path = "../cortex-gateway" }
cortex-provenance = { path = "../cortex-provenance" }
cortex-security = { path = "../cortex-security" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
