[package]
name = "cortex-council"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-gateway = { path = "../cortex-gateway" }
cortex-provenance = { path = "../cortex-provenance" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
