[package]
name = "cortex-deep-research"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-tracedb = { path = "../cortex-tracedb" }
cortex-provenance = { path = "../cortex-provenance" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
