[package]
name = "cortex-document-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-provenance = { path = "../cortex-provenance" }
cortex-tracedb = { path = "../cortex-tracedb" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
