[package]
name = "cortex-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-provenance = { path = "../cortex-provenance" }
cortex-security = { path = "../cortex-security" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }