[package]
name = "cortex-self-validate"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-validate = { path = "../cortex-validate" }
cortex-provenance = { path = "../cortex-provenance" }
cortex-tracedb = { path = "../cortex-tracedb" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
