[package]
name = "cortex-validate"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-provenance = { path = "../cortex-provenance" }
cortex-tracedb = { path = "../cortex-tracedb" }
cortex-gateway = { path = "../cortex-gateway" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
arrow = { workspace = true }
statrs = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
